[package]
name = "storage"
version = "0.0.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/storage"
homepage = "https://github.com/stainless-steel/storage"
documentation = "https://stainless-steel.github.io/storage"
description = "The package provides data storage schemes."

[dev-dependencies]
assert = "*"
